# amazonface-data-curation-docs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: index.md
docs/appendices/: checklists.md  faq.md  glossary.md  source-traceability.md
docs/assets/javascripts/: navbar-download.js
docs/assets/stylesheets/: brand.css
docs/authoring/: chapter-template.md  sop-template.md  templates-overview.md
docs/foundations/: 01-purpose-and-scope.md  02-dataset-context-and-taxonomy.md  03-governance-and-compliance-standards.md
docs/operations/: 09-observability-and-metrics.md  10-release-versioning-and-change-control.md  11-incident-response-and-exception-handling.md
docs/pipeline-standards/: 04-pipeline-overview-e2e.md  05-ingestion-and-validation.md  06-annotation-and-labeling-standards.md  07-data-cleaning-and-normalization.md  08-quality-assurance-and-acceptance-gates.md  09-dataset-mapping-and-prioritization.md  10-responsible-contact-and-training.md  11-data-lake-webdav-storage.md  12-datamap-publication-and-doi.md
docs/stories/: 1.1-storyboard-mkdocs-digital-book.md  1.2-mkdocs-bootstrap-and-initial-navigation.md  1.3-core-chapter-content-v1.md  1.4-template-upgrade-and-visual-polish.md  1.5-docling-extraction-and-book-synthesis.md  1.6-pdf-generation-and-download.md  1.7-navbar-pdf-download-button.md  1.8-github-pages-build-and-deploy.md  1.8.1-pages-ci-hotfix-download-path-and-version-pin.md  1.8.2-pages-ci-hotfix-sanity-check-fallback.md
source/scripts/: extract_with_docling.py  generate_book_pdf.sh
(+16 files in other folders)
